--- a/src/ImageItem/ImageItem.module.css
+++ b/src/ImageItem/ImageItem.module.css
@@ -1,9 +1,7 @@
 .box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 200px;
   margin: 0 auto;
+  display: grid;
 }
 
 img {
